# watchbot

./: .gitignore  README.md  SPEC.md
.github/workflows/: build.yml
client/: package-lock.json  package.json
client-static/: index.html
client/src/app/: layout.tsx  page.tsx
client/src/lib/: api.ts
server/: package-lock.json  package.json
server/data/: watchbot.db
server/src/: index.js
watchbot-tauri/: README.md  package-lock.json  package.json
watchbot-tauri/src/: index.html
watchbot-tauri/src-tauri/: Cargo.toml  tauri.conf.json
watchbot-tauri/src-tauri/src/: main.rs
